[gd_scene load_steps=16 format=3 uid="uid://d3nyberodc08l"]

[ext_resource type="PackedScene" uid="uid://cfhs63kph2b4c" path="res://Game Scenes/incident response/drag_card.tscn" id="1_8cfm8"]
[ext_resource type="PackedScene" uid="uid://dg0i68ysq1t73" path="res://dialogue/dialogue_2.tscn" id="1_somdj"]
[ext_resource type="Script" uid="uid://dawtifeoyo25c" path="res://Game Scenes/incident response/incident_response.gd" id="1_xnmrl"]
[ext_resource type="LabelSettings" uid="uid://cwnywbkegrs7b" path="res://Game Scenes/incident response/card_text.tres" id="2_04h1o"]
[ext_resource type="LabelSettings" uid="uid://btbw7addmvduq" path="res://Game Scenes/incident response/incident_safe_unsafe.tres" id="2_5qowp"]
[ext_resource type="Script" uid="uid://dtmwp6ismaah4" path="res://Game Scenes/incident response/Dropzone.gd" id="2_mdavj"]
[ext_resource type="LabelSettings" uid="uid://5ccgk8ruls1n" path="res://MainMenu/Font/Button_FONT.tres" id="4_yd4tu"]
[ext_resource type="LabelSettings" uid="uid://uroktm3eaxo0" path="res://Game Scenes/Phishing/score_label.tres" id="6_0dr8j"]
[ext_resource type="LabelSettings" uid="uid://6i4uxhfky4l0" path="res://MainMenu/Font/Main_Menu_NAME_100px.tres" id="7_04h1o"]
[ext_resource type="FontFile" uid="uid://dlxeofevbk4t2" path="res://MainMenu/Font/LuckiestGuy-Regular.ttf" id="8_yd4tu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8cfm8"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5qowp"]
bg_color = Color(0.180392, 0.490196, 0.196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mdavj"]
bg_color = Color(0.827451, 0.184314, 0.184314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cwm6p"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ofxr8"]
bg_color = Color(1, 0.509804, 0.458824, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="incident_response" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xnmrl")
e_file = "res://Game Scenes/incident response/incident_response.json"

[node name="Main" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -360.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8cfm8")

[node name="MarginContainer5" type="MarginContainer" parent="Main"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -450.0
offset_right = 450.0
offset_bottom = 120.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Panel" type="Panel" parent="Main/MarginContainer5"]
layout_mode = 2

[node name="scenario_text" type="Label" parent="Main/MarginContainer5/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
label_settings = ExtResource("2_04h1o")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Main"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 640.0
offset_bottom = 60.0
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="draggable_card1" parent="Main/MarginContainer" instance=ExtResource("1_8cfm8")]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Main"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -60.0
offset_bottom = 60.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="draggable_card2" parent="Main/MarginContainer2" instance=ExtResource("1_8cfm8")]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="Main"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -120.0
offset_right = 640.0
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="draggable_card3" parent="Main/MarginContainer3" instance=ExtResource("1_8cfm8")]
layout_mode = 2

[node name="MarginContainer4" type="MarginContainer" parent="Main"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -640.0
offset_top = -120.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="draggable_card4" parent="Main/MarginContainer4" instance=ExtResource("1_8cfm8")]
layout_mode = 2

[node name="test_score" type="Label" parent="Main"]
layout_mode = 0
offset_left = 30.0
offset_top = 18.0
offset_right = 140.0
offset_bottom = 81.0
label_settings = ExtResource("4_yd4tu")

[node name="safe_panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -360.0
offset_right = 640.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_5qowp")
script = ExtResource("2_mdavj")
zone_type = "safe"

[node name="Safe" type="Label" parent="safe_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "SAFE"
label_settings = ExtResource("2_5qowp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="unsafe_panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 640.0
offset_top = -360.0
offset_right = 1280.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_mdavj")
script = ExtResource("2_mdavj")
zone_type = "unsafe"

[node name="Unsafe" type="Label" parent="unsafe_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "UNSAFE"
label_settings = ExtResource("2_5qowp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="block_click" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dialogue" parent="." instance=ExtResource("1_somdj")]
visible = false

[node name="FinalScorePanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cwm6p")

[node name="Score" type="Panel" parent="FinalScorePanel"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -190.0
offset_right = 125.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ofxr8")

[node name="FinalScoreText" type="Label" parent="FinalScorePanel/Score"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.0
offset_top = -59.0
offset_right = 89.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
text = "20"
label_settings = ExtResource("6_0dr8j")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="FinalScorePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -341.0
offset_top = 42.0
offset_right = 333.0
offset_bottom = 159.0
grow_horizontal = 2
text = "Your Score is:"
label_settings = ExtResource("7_04h1o")
horizontal_alignment = 1
vertical_alignment = 1

[node name="retry" type="Button" parent="FinalScorePanel"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = -302.0
offset_right = 480.0
offset_bottom = -152.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("8_yd4tu")
theme_override_font_sizes/font_size = 50
text = "RETRY"

[node name="main_menu" type="Button" parent="FinalScorePanel"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -480.0
offset_top = -302.0
offset_right = -200.0
offset_bottom = -152.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("8_yd4tu")
theme_override_font_sizes/font_size = 50
text = "MAIN MENU"

[node name="next_level" type="Button" parent="FinalScorePanel"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -776.0
offset_top = -266.0
offset_right = -496.0
offset_bottom = -116.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("8_yd4tu")
theme_override_font_sizes/font_size = 50
text = "NEXT LEVEL"
